# lucidscan

./: .gitignore  CHANGELOG.md  QUALITY.md  README.md  install.ps1  install.sh  lucidscan.yml  lucidshark.spec  lucidshark.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  integration-tests.yml  release.yml
.lucidshark/: quality-history.json
docs/: ci-integration.md  exclude-patterns.md  guide-python.md  guide-typescript.md  help.md  incremental-scanning.md  main.md  roadmap.md
docs/languages/: README.md  c.md  cpp.md  csharp.md  java.md  javascript.md  php.md  python.md  rust.md  scala.md  swift.md  typescript.md
docs/specs/: main.md
src/lucidscan/: __init__.py  cli.py
src/lucidscan/bootstrap/: __init__.py  bundle.py  paths.py  platform.py  validation.py  versions.py
src/lucidscan/cli/: arguments.py  config_bridge.py  runner.py
src/lucidscan/cli/commands/: __init__.py  autoconfigure.py  help.py  init.py  list_scanners.py  scan.py  setup.py  status.py  validate.py
src/lucidscan/config/: ignore.py  loader.py  validation.py
src/lucidscan/core/: __init__.py  domain_runner.py  logging.py  models.py  paths.py  streaming.py  subprocess_runner.py
src/lucidscan/detection/: __init__.py  ci.py  detector.py  frameworks.py  languages.py  tools.py
src/lucidscan/generation/: __init__.py  ci_generator.py  config_generator.py  package_installer.py
src/lucidscan/mcp/: formatter.py  server.py  tools.py
src/lucidscan/pipeline/: executor.py  parallel.py
src/lucidscan/plugins/: __init__.py  discovery.py
src/lucidscan/plugins/coverage/: __init__.py  base.py  coverage_py.py  istanbul.py
src/lucidscan/plugins/enrichers/: __init__.py  ai_explainer.py  base.py
src/lucidscan/plugins/linters/: __init__.py  base.py  biome.py  checkstyle.py  eslint.py  ruff.py
src/lucidscan/plugins/reporters/: __init__.py  base.py  json_reporter.py  sarif_reporter.py  summary_reporter.py  table_reporter.py
src/lucidscan/plugins/scanners/: __init__.py  base.py  checkov.py  opengrep.py  trivy.py
src/lucidscan/plugins/test_runners/: __init__.py  base.py  jest.py  karma.py  playwright.py  pytest.py
src/lucidscan/plugins/type_checkers/: mypy.py  pyright.py  typescript.py
src/lucidscan/scanners/: __init__.py  base.py
src/lucidshark/: __init__.py  telemetry.py  updater.py
src/lucidshark/bootstrap/: __init__.py  download.py  platform.py  validation.py  versions.py
src/lucidshark/cli/: __init__.py  arguments.py  config_bridge.py  runner.py
src/lucidshark/config/: __init__.py  ignore.py  loader.py  models.py  validation.py
src/lucidshark/core/: __init__.py  domain_runner.py  git.py  ignore_issues.py  logging.py  models.py  paths.py  subprocess_runner.py  tool_validation.py
src/lucidshark/data/: __init__.py  pmd-ruleset.xml
src/lucidshark/detection/: detector.py  frameworks.py  languages.py  tools.py
src/lucidshark/generation/: __init__.py  config_generator.py  package_installer.py  template_composer.py
src/lucidshark/mcp/: formatter.py  server.py  tools.py  watcher.py
src/lucidshark/pipeline/: executor.py
src/lucidshark/plugins/: c_utils.py  cpp_utils.py  discovery.py  go_utils.py  rust_utils.py  swift_utils.py  utils.py
src/lucidshark/presets/: __init__.py  builtin.py  registry.py
tests/: __init__.py
tests/claude-manual/: AUTOCONFIGURE_TEST_TEMPLATE.md  TEST_GO_E2E.md  TEST_JAVASCRIPT_E2E.md  TEST_JAVA_E2E.md  TEST_PYTHON_E2E.md
tests/integration/: __init__.py  conftest.py
tests/integration/bootstrap/: __init__.py
tests/integration/cli/: test_scan_integration.py
tests/integration/core/: __init__.py
tests/integration/coverage/: __init__.py  test_coverage_py_integration.py  test_go_cover_integration.py  test_jacoco_integration.py  test_tarpaulin_integration.py
tests/integration/formatters/: test_gofmt_integration.py
tests/integration/linters/: test_checkstyle_integration.py  test_clippy_integration.py  test_eslint_integration.py
tests/integration/mcp/: test_mcp_integration.py
tests/integration/projects/: conftest.py  test_java_project.py  test_python_project.py  test_rust_project.py  test_security_scanning.py  test_swift_project.py  test_typescript_project.py
tests/integration/scanners/: __init__.py  test_checkov_integration.py  test_opengrep_integration.py  test_trivy_integration.py
tests/integration/test_runners/: __init__.py  test_cargo_integration.py  test_maven_integration.py  test_pytest_integration.py
tests/integration/type_checkers/: test_cargo_check_integration.py  test_mypy_integration.py  test_pyright_integration.py  test_spotbugs_integration.py  test_typescript_integration.py
tests/unit/: __init__.py  test_cli.py  test_init_command.py  test_telemetry.py  test_updater.py
tests/unit/bootstrap/: __init__.py  test_bundle.py  test_paths.py  test_platform.py  test_validation.py  test_versions.py
tests/unit/cli/: test_main_entry.py  test_runner.py
tests/unit/config/: test_domain_excludes.py  test_loader.py  test_models.py  test_validation.py
tests/unit/core/: __init__.py  test_domain_runner.py  test_domain_runner_formatting.py  test_git.py  test_ignore_issues.py  test_models.py  test_paths.py  test_tool_validation.py
tests/unit/data/: test_templates.py
tests/unit/detection/: test_csharp_detection.py  test_frameworks.py  test_languages.py  test_scala_detection.py
tests/unit/enrichers/: test_ai_explainer.py  test_base.py
tests/unit/generation/: test_package_installer.py  test_template_composer.py
tests/unit/mcp/: test_formatter.py  test_server.py  test_server_extended.py  test_tools.py  test_watcher.py
tests/unit/pipeline/: test_executor.py  test_parallel.py
tests/unit/plugins/: test_c_utils.py  test_cpp_utils.py  test_discovery.py  test_exclusion_patterns.py  test_go_utils.py  test_utils.py
tests/unit/presets/: test_presets.py
tests/unit/reporters/: test_reporters.py
tests/unit/scanners/: __init__.py  test_checkov.py  test_discovery.py  test_opengrep.py  test_trivy.py
(+191 files in other folders)
