["build-system"]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidshark"
version = "0.5.49"
description = "LucidShark - The trust layer for AI-assisted development"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Voldeq GmbH", email = "toni.antunovic@voldeq.com" }
]
keywords = [
  "security",
  "scanner",
  "devsecops",
  "sast",
  "sca",
  "iac",
  "container",
  "vulnerability",
  "trivy",
  "semgrep",
  "checkov",
  "cli",
  "mcp",
  "ai",
  "claude",
  "linting",
  "type-checking",
  "testing",
  "coverage",
  "duplication",
  "code-clone",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
  "pathspec>=0.12.0",
  "questionary>=2.0",
  "Jinja2>=3.0",
  "watchdog>=4.0.0",
  "defusedxml>=0.7.1",
  "tomli>=2.0.0; python_version < '3.11'",
  "certifi>=2024.0.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.0",
  "coverage>=7.0",
  "ruff>=0.4",
  "mypy>=1.0",
  "pyright>=1.1",
  "types-PyYAML>=6.0",
  "types-defusedxml>=0.7",
  "pyinstaller>=6.0",
  "mcp>=1.0.0",
]

[project.scripts]
lucidshark = "lucidshark.cli:main"

[project.entry-points."lucidshark.linters"]
ruff = "lucidshark.plugins.linters.ruff:RuffLinter"
eslint = "lucidshark.plugins.linters.eslint:ESLintLinter"
biome = "lucidshark.plugins.linters.biome:BiomeLinter"
checkstyle = "lucidshark.plugins.linters.checkstyle:CheckstyleLinter"
clippy = "lucidshark.plugins.linters.clippy:ClippyLinter"

[project.entry-points."lucidshark.scanners"]
trivy = "lucidshark.plugins.scanners.trivy:TrivyScanner"
opengrep = "lucidshark.plugins.scanners.opengrep:OpenGrepScanner"
checkov = "lucidshark.plugins.scanners.checkov:CheckovScanner"

[project.entry-points."lucidshark.reporters"]
ai = "lucidshark.plugins.reporters.ai_reporter:AIReporter"
json = "lucidshark.plugins.reporters.json_reporter:JSONReporter"
sarif = "lucidshark.plugins.reporters.sarif_reporter:SARIFReporter"
summary = "lucidshark.plugins.reporters.summary_reporter:SummaryReporter"
table = "lucidshark.plugins.reporters.table_reporter:TableReporter"

[project.entry-points."lucidshark.type_checkers"]
mypy = "lucidshark.plugins.type_checkers.mypy:MypyChecker"
pyright = "lucidshark.plugins.type_checkers.pyright:PyrightChecker"
typescript = "lucidshark.plugins.type_checkers.typescript:TypeScriptChecker"
spotbugs = "lucidshark.plugins.type_checkers.spotbugs:SpotBugsChecker"
cargo_check = "lucidshark.plugins.type_checkers.cargo_check:CargoCheckChecker"

[project.entry-points."lucidshark.test_runners"]
pytest = "lucidshark.plugins.test_runners.pytest:PytestRunner"
jest = "lucidshark.plugins.test_runners.jest:JestRunner"
karma = "lucidshark.plugins.test_runners.karma:KarmaRunner"
playwright = "lucidshark.plugins.test_runners.playwright:PlaywrightRunner"
maven = "lucidshark.plugins.test_runners.maven:MavenTestRunner"
cargo = "lucidshark.plugins.test_runners.cargo:CargoTestRunner"

[project.entry-points."lucidshark.coverage"]
coverage_py = "lucidshark.plugins.coverage.coverage_py:CoveragePyPlugin"
istanbul = "lucidshark.plugins.coverage.istanbul:IstanbulPlugin"
jacoco = "lucidshark.plugins.coverage.jacoco:JaCoCoPlugin"
tarpaulin = "lucidshark.plugins.coverage.tarpaulin:TarpaulinPlugin"

[project.entry-points."lucidshark.duplication"]
duplo = "lucidshark.plugins.duplication.duplo:DuploPlugin"

[tool.setuptools.package-data]
lucidshark = ["data/*.md"]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Exclude project-based integration tests by default (they require external deps)
# Run with: pytest tests/integration/projects -v
# Also ignore test projects' internal tests (python-webapp/tests, etc.)
addopts = "--ignore=tests/integration/projects --ignore=tests/integration/projects/python-webapp/tests --ignore=tests/integration/projects/typescript-api/tests"
markers = [
    "integration: marks tests as integration tests (run with: pytest -m integration)",
]

# Tool versions - single source of truth for lucidshark-managed tools
# Only includes tools that LucidShark downloads itself (security tools + duplo)
# Language-specific tools (ruff, biome, etc.) should be installed via package managers
[tool.lucidshark.tools]
# Security scanners
trivy = "0.69.3"
opengrep = "1.16.3"
checkov = "3.2.506"
# Duplication detection
duplo = "0.1.6"
