# LucidShark Configuration
# This file is used for development tooling configuration only.
# LucidShark is distributed as a standalone binary via install.sh

# Minimal project config for development (pip install -e .)
[project]
name = "lucidshark"
version = "0.0.0-dev"
requires-python = ">=3.10"

# Entry points for plugin discovery
[project.entry-points."lucidshark.linters"]
ruff = "lucidshark.plugins.linters.ruff:RuffLinter"
eslint = "lucidshark.plugins.linters.eslint:ESLintLinter"
biome = "lucidshark.plugins.linters.biome:BiomeLinter"
clippy = "lucidshark.plugins.linters.clippy:ClippyLinter"
golangci_lint = "lucidshark.plugins.linters.golangci_lint:GoLangCILintLinter"
checkstyle = "lucidshark.plugins.linters.checkstyle:CheckstyleLinter"
pmd = "lucidshark.plugins.linters.pmd:PmdLinter"
ktlint = "lucidshark.plugins.linters.ktlint:KtlintLinter"
dotnet_format = "lucidshark.plugins.linters.dotnet_format:DotnetFormatLinter"
clang_tidy = "lucidshark.plugins.linters.clang_tidy:ClangTidyLinter"
scalafix = "lucidshark.plugins.linters.scalafix:ScalafixLinter"
swiftlint = "lucidshark.plugins.linters.swiftlint:SwiftLintLinter"
rubocop = "lucidshark.plugins.linters.rubocop:RubocopLinter"
phpcs = "lucidshark.plugins.linters.phpcs:PhpcsLinter"

[project.entry-points."lucidshark.scanners"]
trivy = "lucidshark.plugins.scanners.trivy:TrivyScanner"
opengrep = "lucidshark.plugins.scanners.opengrep:OpenGrepScanner"
checkov = "lucidshark.plugins.scanners.checkov:CheckovScanner"
gosec = "lucidshark.plugins.scanners.gosec:GosecScanner"

[project.entry-points."lucidshark.reporters"]
ai = "lucidshark.plugins.reporters.ai_reporter:AIReporter"
json = "lucidshark.plugins.reporters.json_reporter:JSONReporter"
sarif = "lucidshark.plugins.reporters.sarif_reporter:SARIFReporter"
summary = "lucidshark.plugins.reporters.summary_reporter:SummaryReporter"
table = "lucidshark.plugins.reporters.table_reporter:TableReporter"

[project.entry-points."lucidshark.type_checkers"]
mypy = "lucidshark.plugins.type_checkers.mypy:MypyChecker"
pyright = "lucidshark.plugins.type_checkers.pyright:PyrightChecker"
typescript = "lucidshark.plugins.type_checkers.typescript:TypeScriptChecker"
spotbugs = "lucidshark.plugins.type_checkers.spotbugs:SpotBugsChecker"
cargo_check = "lucidshark.plugins.type_checkers.cargo_check:CargoCheckChecker"
go_vet = "lucidshark.plugins.type_checkers.go_vet:GoVetChecker"
detekt = "lucidshark.plugins.type_checkers.detekt:DetektChecker"
dotnet_build = "lucidshark.plugins.type_checkers.dotnet_build:DotnetBuildChecker"
cppcheck = "lucidshark.plugins.type_checkers.cppcheck:CppcheckChecker"
scala_compile = "lucidshark.plugins.type_checkers.scala_compile:ScalaCompileChecker"
swift_compiler = "lucidshark.plugins.type_checkers.swift_compiler:SwiftCompilerChecker"
sorbet = "lucidshark.plugins.type_checkers.sorbet:SorbetChecker"
phpstan = "lucidshark.plugins.type_checkers.phpstan:PhpstanChecker"

[project.entry-points."lucidshark.test_runners"]
pytest = "lucidshark.plugins.test_runners.pytest:PytestRunner"
jest = "lucidshark.plugins.test_runners.jest:JestRunner"
karma = "lucidshark.plugins.test_runners.karma:KarmaRunner"
playwright = "lucidshark.plugins.test_runners.playwright:PlaywrightRunner"
maven = "lucidshark.plugins.test_runners.maven:MavenTestRunner"
cargo = "lucidshark.plugins.test_runners.cargo:CargoTestRunner"
go_test = "lucidshark.plugins.test_runners.go_test:GoTestRunner"
vitest = "lucidshark.plugins.test_runners.vitest:VitestRunner"
mocha = "lucidshark.plugins.test_runners.mocha:MochaRunner"
dotnet_test = "lucidshark.plugins.test_runners.dotnet_test:DotnetTestRunner"
ctest = "lucidshark.plugins.test_runners.ctest:CTestRunner"
sbt = "lucidshark.plugins.test_runners.sbt:SbtTestRunner"
swift_test = "lucidshark.plugins.test_runners.swift_test:SwiftTestRunner"
rspec = "lucidshark.plugins.test_runners.rspec:RspecRunner"
phpunit = "lucidshark.plugins.test_runners.phpunit:PhpunitRunner"

[project.entry-points."lucidshark.coverage"]
coverage_py = "lucidshark.plugins.coverage.coverage_py:CoveragePyPlugin"
istanbul = "lucidshark.plugins.coverage.istanbul:IstanbulPlugin"
jacoco = "lucidshark.plugins.coverage.jacoco:JaCoCoPlugin"
tarpaulin = "lucidshark.plugins.coverage.tarpaulin:TarpaulinPlugin"
go_cover = "lucidshark.plugins.coverage.go_cover:GoCoverPlugin"
dotnet_coverage = "lucidshark.plugins.coverage.dotnet_coverage:DotnetCoveragePlugin"
vitest_coverage = "lucidshark.plugins.coverage.vitest:VitestCoveragePlugin"
gcov = "lucidshark.plugins.coverage.gcov:GcovPlugin"
lcov = "lucidshark.plugins.coverage.lcov:LcovPlugin"
scoverage = "lucidshark.plugins.coverage.scoverage:ScoveragePlugin"
swift_coverage = "lucidshark.plugins.coverage.swift_coverage:SwiftCoveragePlugin"
simplecov = "lucidshark.plugins.coverage.simplecov:SimpleCovPlugin"
phpunit_coverage = "lucidshark.plugins.coverage.phpunit_coverage:PhpunitCoveragePlugin"

[project.entry-points."lucidshark.duplication"]
duplo = "lucidshark.plugins.duplication.duplo:DuploPlugin"

[project.entry-points."lucidshark.formatters"]
ruff_format = "lucidshark.plugins.formatters.ruff_format:RuffFormatter"
prettier = "lucidshark.plugins.formatters.prettier:PrettierFormatter"
rustfmt = "lucidshark.plugins.formatters.rustfmt:RustfmtFormatter"
gofmt = "lucidshark.plugins.formatters.gofmt:GofmtFormatter"
ktlint_format = "lucidshark.plugins.formatters.ktlint_format:KtlintFormatter"
dotnet_format_whitespace = "lucidshark.plugins.formatters.dotnet_format:DotnetFormatFormatter"
clang_format = "lucidshark.plugins.formatters.clang_format:ClangFormatFormatter"
scalafmt = "lucidshark.plugins.formatters.scalafmt:ScalafmtFormatter"
swiftformat = "lucidshark.plugins.formatters.swiftformat:SwiftFormatFormatter"
rubocop_format = "lucidshark.plugins.formatters.rubocop_format:RubocopFormatter"
php_cs_fixer = "lucidshark.plugins.formatters.php_cs_fixer:PhpCsFixerFormatter"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Exclude project-based integration tests by default (they require external deps)
# Run with: pytest tests/integration/projects -v
# Also ignore test projects' internal tests (python-webapp/tests, etc.)
# Scanner CLI integration tests are excluded because they depend on downloaded binaries
# and specific platform/dependency states. Run with: pytest tests/integration/scanners -v
addopts = "--ignore=tests/integration/projects --ignore=tests/integration/projects/python-webapp/tests --ignore=tests/integration/projects/typescript-api/tests --ignore=tests/integration/scanners"
markers = [
    "integration: marks tests as integration tests (run with: pytest -m integration)",
    "binary: marks tests that require the PyInstaller binary (run with: pytest -m binary)",
]

# Tool versions - single source of truth for lucidshark-managed tools
# Only includes tools that LucidShark downloads itself (security tools + duplo)
# Language-specific tools (ruff, biome, etc.) should be installed via package managers
[tool.lucidshark.tools]
# Security scanners
trivy = "0.69.3"
opengrep = "1.16.5"
checkov = "3.2.513"
gosec = "2.25.0"
# Java tools
pmd = "7.23.0"
checkstyle = "13.3.0"
spotbugs = "4.9.8"
# Kotlin tools
ktlint = "1.8.0"
detekt = "1.23.8"
# Duplication detection
duplo = "0.2.0"
